[ADD] updates to get basic packaging working

--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,14 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py34, py35, py36, pypy, jython
+# envlist = py27, py34, py35, py36, pypy, jython
+envlist = py36
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
 deps =
     pytest
-    unicodedata
-    re
+    
 commands =
 	# NOTE: you can run any command line tool here - not just tests
     pytest
