[ADD] fixes to get a basic adr_tool test working, skeletal structure now in place to flesh out

--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,13 @@
 
 [tox]
 # envlist = py27, py34, py35, py36, pypy, jython
-envlist = py36
+# envlist = py{27,36,37}, docs, style, security
+envlist = py{36,37}
+skip_missing_interpreters = true
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
-deps =
-    pytest
+deps = -rtests/requirements.txt
     
 commands =
 	# NOTE: you can run any command line tool here - not just tests
