[ADD] support for testing if a text blob is NFC or not, since you can't really tell by looking or selecting it in Sublime Text

--- a/tox.ini
+++ b/tox.ini
@@ -6,13 +6,14 @@
 [tox]
 # envlist = py27, py34, py35, py36, pypy, jython
 # envlist = py{27,36,37}, docs, style, security
-envlist = py{36,37}
+envlist = py{py35,36,37}
 skip_missing_interpreters = true
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
-deps = -rtests/requirements.txt
-    
+deps = -rrequirements.txt
+       -rtests/requirements.txt
+
 commands =
 	# NOTE: you can run any command line tool here - not just tests
     pytest
