[FIX] travis build and submit to PYPI because repo's name does not match one specified in .travis.yml's deploy.on.repo: ruohoruotsi/iranlowo

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ deploy:
     distributions: "sdist bdist_wheel"
     on:
       python: 3.6
-      repo: ruohoruotsi/iranlowo
+      repo: Niger-Volta-LTI/iranlowo
       tags: true
