--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,17 @@ python:
 install:
   - pip install tox-travis
 
+env:
+  global:
+    # Directory where tests are run from
+    - TEST_DIR=/tmp/iranlowo
+    - NIGER_VOLTA_CORPUS= /tmp/yoruba-text
+
 script:
-  - tox
+  - tox $TEST_DIR
+
+before_install:
+  - git clone https://github.com/Niger-Volta-LTI/yoruba-text /tmp/yoruba-text
 
 after_success:
   - tox -e coverage,codecov
