Cleaning up tox

--- a/tox.ini
+++ b/tox.ini
@@ -17,3 +17,7 @@ deps = -rrequirements.txt
 commands =
 	# NOTE: you can run any command line tool here - not just tests
     pytest
+
+setenv =
+    - TEST_DIR=/tmp/iranlowo
+    - NIGER_VOLTA_CORPUS= /tmp/yoruba-text
