--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,8 @@ deps = -rrequirements.txt
 
 commands =
 	# NOTE: you can run any command line tool here - not just tests
-    pytest
+    git clone https://github.com/Niger-Volta-LTI/yoruba-text /tmp/yoruba-text
+    pytest $TEST_DIR
 
 setenv =
     - TEST_DIR=/tmp/iranlowo
