--- a/tox.ini
+++ b/tox.ini
@@ -16,9 +16,4 @@ deps = -rrequirements.txt
 
 commands =
 	# NOTE: you can run any command line tool here - not just tests
-    git clone https://github.com/Niger-Volta-LTI/yoruba-text /tmp/yoruba-text
-    pytest $TEST_DIR
-
-setenv =
-    - TEST_DIR=/tmp/iranlowo
-    - NIGER_VOLTA_CORPUS= /tmp/yoruba-text
+    pytest
