--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ install:
 
 env:
   - TEST_DIR=/tmp/iranlowo
-  - NIGER_VOLTA_CORPUS= /tmp/yoruba-text
+  - NIGER_VOLTA_CORPUS=/tmp/yoruba-text
 
 script:
-  - tox $TEST_DIR
+  - tox
 
 before_install:
   - git clone https://github.com/Niger-Volta-LTI/yoruba-text /tmp/yoruba-text
